k8s/pulsar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulsar
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: pulsar
  ports:
  - name: pulsar
    port: 6650
    targetPort: 6650
    protocol: TCP
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pulsar-admin
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: pulsar
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
