k8s/pulsar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulsar-admin
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: pulsar.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pulsar-admin
            port:
              number: 80
